--- a/main.html
+++ b/main.html
@@ -8,6 +8,44 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table>
+		<thead>
+			<tr>
+				<th>Part</th>
+				<th>XS</th>
+				<th>S</th>
+				<th>M</th>
+				<th>L</th>
+				<th>XL</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<th>Waist</th>
+				<th>25</th>
+				<th>28</th>
+				<th>30</th>
+				<th>31</th>
+				<th>32</th>
+			</tr>
+			<tr>
+				<th>Chest</th>
+				<th>34</th>
+				<th>34</th>
+				<th>38</th>
+				<th>40</th>
+				<th>41</th>
+			</tr>
+			<tr>
+				<th>Sleeve</th>
+				<th>23</th>
+				<th>24</th>
+				<th>24</th>
+				<th>25</th>
+				<th>25</th>
+			</tr>
+		</tbody>
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
